# Smart-aquaculture-AI-ecosystem

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
config/: farms_config.json
data/knowledge/: norway_aquaculture_law.md
docs/: agents-orchestration.md  architecture.md  data-schemas.md  kafka-topics.md  knowledge-ingestion.md  vector-worker-spec.md
docs/adr/: ADR-001-redpanda-vs-kafka.md  ADR-002-circuit-breaker-embeddings.md  ADR-003-at-least-once-orchestrator.md  ADR-004-embedding-dimensions-ollama.md  README.md
lib/: README.md
schemas/: iot_sensor_event.schema.json  market_data_event.schema.json
src/: __init__.py
src/agents/: __init__.py  graph.py  main.py  state.py  tools.py
src/ingestion/: __init__.py  knowledge_loader.py  ocean_producer.py
src/processing/: __init__.py  vector_worker.py
src/producers/: __init__.py
src/ui/: dashboard.py
tests/unit/: test_ocean_producer.py
