[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oceantrust-producer"
version = "0.1.0"
description = "OceanTrust AI — Async Redpanda producers for salmon farm telemetry and fish market data"
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.12"

dependencies = [
  # ── Kafka / Redpanda ─────────────────────────────────────────────────────
  "aiokafka>=0.10.0",
  # ── Data modelling & configuration ───────────────────────────────────────
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  # ── Logging ───────────────────────────────────────────────────────────────
  "structlog>=24.2.0",
  # ── Schema validation ─────────────────────────────────────────────────────
  "jsonschema>=4.21.0",
  # ── Vector database ───────────────────────────────────────────────────────
  "qdrant-client[async]>=1.9.0",
  # ── LLM & Embedding APIs ──────────────────────────────────────────────────
  "google-generativeai>=0.8.0",    # Google AI Python SDK (Gemini backbone)
  "httpx>=0.27.0",
  # ── LangGraph multi-agent orchestration ──────────────────────────────────
  "langgraph>=0.1.0",
  "langchain-core>=0.2.0",
  "langchain-google-genai>=1.0.10",  # ChatGoogleGenerativeAI + GoogleGenerativeAIEmbeddings
  "langchain-text-splitters>=0.2.0",  # RecursiveCharacterTextSplitter for knowledge_loader
]

[project.optional-dependencies]
# Ingestion pipeline extras — install with: pip install -e '.[ingestion]'
ingestion = [
  "httpx>=0.27.0",           # HTTP client for regulatory document crawling
  "feedparser>=6.0.11",      # RSS feed parser for regulatory bulletin scraping
  "pymupdf>=1.24.0",         # PDF parser (PyMuPDF)
]

# Visualization / Control Tower — install with: pip install -e '.[viz]'
viz = [
  "streamlit>=1.35.0",       # Control Tower web application framework
  "plotly>=5.22.0",          # Interactive charts (gauges, time-series)
  "pandas>=2.2.0",           # Dataframe manipulation for telemetry history
  "watchdog>=4.0.0",         # Streamlit hot-reload on Linux/macOS
]

dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
  # Spins up a real Redpanda container for integration tests
  "testcontainers[kafka]>=4.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

# =============================================================================
# Ruff — Linter + Formatter
# =============================================================================
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "ANN", "ASYNC"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =============================================================================
# MyPy — Static Type Checking
# =============================================================================
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

# =============================================================================
# Pytest — Test Runner
# =============================================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
  "integration: tests that require a running Redpanda broker",
  "unit: fast tests with no external dependencies",
]
